--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
