--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^4.1.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
