--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,10 @@ services:
     tty: true
     volumes:
       - .docker/dbdata:/var/lib/postgresql/data
-    env_file:
-      - '.env'
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=ed_tech
 
   pgadmin:
     image: dpage/pgadmin4
