--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "ts-jest": "^28.0.7",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
