--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --exit-child -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/shared/infra/typeorm",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
