--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^27.1.4",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
@@ -32,7 +32,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
+    "jest": "27.0.0",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-node-dev": "^2.0.0",
