--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
